--- a/app/src/main/res/layout/link_comments_stub.xml
+++ b/app/src/main/res/layout/link_comments_stub.xml
@@ -9,18 +9,17 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/primary" />
+        android:background="?attr/threadIdentationColor" />
 
     <LinearLayout
         android:id="@+id/comment_item_row"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:layout_height="wrap_content">
 
         <View
             android:id="@+id/indentation"
-            android:background="@color/primary"
+            android:background="?attr/threadIdentationColor"
             android:layout_width="@dimen/comment_indentation_margin"
             android:layout_height="match_parent" />
 
@@ -29,8 +28,9 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/comment_data_height"
             android:gravity="center|center"
-            android:textColor="@color/secondary_text"
+            android:textColor="?attr/textColorSecondary"
             android:textSize="@dimen/comment_more_text_size"
+            android:background="?attr/contentPrimaryBackgroundColor"
             android:maxLines="1"
             tools:text="view 10 more comments" />
 
