--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -1,6 +1,7 @@
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/listings_message">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,9 +10,9 @@
         android:paddingBottom="@dimen/link_list_item_margin_vertical"
         android:paddingLeft="@dimen/link_list_item_margin_horizontal"
         android:paddingRight="@dimen/link_list_item_margin_horizontal"
+        android:background="?attr/contentSecondaryBackgroundColor"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:background="@color/primary_dark">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/conversation_subject"
@@ -21,7 +22,7 @@
             android:gravity="start"
             android:fontFamily="sans-serif-light"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/contentSecondaryTextColor"
             tools:text="The brown fox jumped over the white fence"
             tools:ignore="UnusedAttribute" />
 
@@ -31,6 +32,7 @@
         android:id="@+id/conversation_body_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:background="?attr/contentPrimaryBackgroundColor"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -44,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/baseline_spacing"
-                android:textColor="@color/secondary_text"
+                android:textColor="?attr/textColorSecondary"
                 android:textAppearance="?android:textAppearanceSmall"
                 tools:text="view 9 more messages" />
 
@@ -53,7 +55,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider" />
+            android:background="?attr/threadIdentationColor" />
 
         <LinearLayout
             android:id="@+id/last_message_layout"
@@ -65,7 +67,7 @@
                 android:id="@+id/message_indentation"
                 android:layout_width="@dimen/comment_indentation_margin"
                 android:layout_height="match_parent"
-                android:background="@color/primary_dark" />
+                android:background="?attr/threadIdentationColor" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -87,7 +89,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/secondary_text"
+                        android:textColor="?attr/textColorSecondary"
                         android:textAppearance="?android:textAppearanceSmall"
                         tools:text="from simpleredditreader sent 8 days ago" />
 
@@ -97,7 +99,7 @@
                         android:layout_height="@dimen/unread_message_indicator_size"
                         android:layout_gravity="top"
                         android:src="@drawable/ic_email_black_24dp"
-                        android:tint="@color/reddit_orangered" />
+                        android:tint="?attr/unreadMessageIndicatorColor" />
 
                 </LinearLayout>
 
@@ -108,8 +110,8 @@
                     android:layout_marginBottom="@dimen/baseline_spacing"
                     android:layout_marginLeft="@dimen/baseline_spacing"
                     android:layout_marginRight="@dimen/baseline_spacing"
-                    android:textColor="@color/primary_text"
-                    android:textColorLink="@color/link_color"
+                    android:textColor="?attr/textColorPrimary"
+                    android:textColorLink="?attr/textColorLink"
                     android:textAppearance="?android:textAppearanceSmall"
                     tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod." />
 
