--- a/app/src/main/res/layout/navigate_to_subreddit_edit_text.xml
+++ b/app/src/main/res/layout/navigate_to_subreddit_edit_text.xml
@@ -21,8 +21,8 @@
         android:inputType="text"
         android:maxLines="1"
         android:textAlignment="viewStart"
-        android:textColor="@color/primary_text"
-        android:textColorHint="@color/secondary_text"
+        android:textColor="?attr/textColorPrimary"
+        android:textColorHint="?attr/textColorSecondary"
         android:textSize="@dimen/navigation_drawer_item_text"
         tools:ignore="UnusedAttribute" />
 
@@ -34,7 +34,7 @@
         android:autoMirrored="true"
         android:contentDescription="@string/drawer_navigate_to_subreddit_go_cd"
         android:src="@drawable/ic_arrow_forward_black_24dp"
-        android:tint="@color/accent"
+        android:tint="?attr/colorAccent"
         tools:ignore="UnusedAttribute" />
 
 </LinearLayout>
