--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="@dimen/navigation_drawer_header_height"
-    android:background="@color/primary_dark">
+    android:background="?attr/colorPrimaryDark">
 
     <ImageView
         android:id="@+id/navigation_drawer_header_image"
@@ -42,7 +42,7 @@
             android:layout_weight="1"
             android:gravity="start"
             android:textAlignment="viewStart"
-            android:textColor="#ffffff"
+            android:textColor="?attr/colorPrimaryTextColor"
             android:textSize="@dimen/navigation_drawer_account_name_text"
             android:textStyle="bold"
             tools:ignore="UnusedAttribute"
@@ -57,7 +57,7 @@
             android:layout_marginRight="@dimen/navigation_drawer_icon_margin"
             android:contentDescription="@string/dialog_sign_out_title"
             android:src="@drawable/ic_exit_to_app_black_24dp"
-            android:tint="@color/icons" />
+            android:tint="?attr/iconColor" />
 
     </LinearLayout>
 
