--- a/app/src/main/res/layout/subscription_manager_fragment.xml
+++ b/app/src/main/res/layout/subscription_manager_fragment.xml
@@ -3,8 +3,7 @@
     android:id="@+id/coordinator_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +36,7 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:src="@drawable/ic_search_black_24dp"
-                android:tint="@color/icons" />
+                android:tint="?attr/iconColor" />
 
         </FrameLayout>
 
