--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,47 +1,52 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="AppTheme.Base" />
 
-    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+    <style name="BaseStandardAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- to remove the default action -->
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item> <!-- For 2.x version -->
         <item name="android:windowActionModeOverlay">true</item>
         <!-- app background color -->
-        <item name="android:windowBackground">@color/primary_light</item>
+        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
     </style>
 
-    <style name="ActivityThemeLightBg" parent="AppTheme">
-        <item name="android:windowBackground">@color/white</item>
+    <style name="BaseNightAppTheme" parent="Theme.AppCompat.NoActionBar">
+        <!-- to remove the default action -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item> <!-- For 2.x version -->
+        <item name="android:windowActionModeOverlay">true</item>
+        <!-- app background color -->
+        <item name="android:windowBackground">?attr/windowBackgroundColor</item>
     </style>
 
-    <style name="ToolbarThemeLightText" parent="AppTheme">
-        <item name="android:textColorPrimary">@color/icons</item>
-        <item name="actionMenuTextColor">@color/icons</item>
-        <item name="android:textColorSecondary">@color/icons</item>
+    <style name="StandardAppTheme" parent="BaseStandardAppTheme" />
+
+    <style name="NightAppTheme" parent="BaseNightAppTheme" />
+
+    <style name="BaseDialogTheme" parent="Theme.AppCompat.Dialog">
+        <item name="colorAccent">@color/redA200</item>
     </style>
 
-    <style name="LinkMetadataTextViewLight">
+    <style name="ToolbarStyle" parent="BaseNightAppTheme">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="actionMenuTextColor">@color/white</item>
+    </style>
+
+    <style name="LinkMetadataTextViewTop">
         <item name="android:textAppearance">?android:textAppearanceSmall</item>
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">?attr/contentPrimaryTextColorPrimary</item>
     </style>
 
-    <style name="LinkMetadataTextViewDark">
+    <style name="LinkMetadataTextViewBottom">
         <item name="android:textAppearance">?android:textAppearanceSmall</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">?attr/contentSecondaryTextColor</item>
     </style>
 
-    <style name="ProgressDialog" parent="Theme.AppCompat.Dialog">
+    <style name="ProgressDialog" parent="BaseDialogTheme">
         <item name="android:alertDialogStyle">@style/CustomAlertDialogStyle</item>
         <item name="android:windowBackground">@color/transparent</item>
-        <item name="android:textColorPrimary">@color/icons</item>
         <item name="android:backgroundDimEnabled">true</item>
-        <item name="android:textColor">@color/icons</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textAppearance">?android:textAppearanceSmall</item>
     </style>
 
     <style name="CustomAlertDialogStyle">
@@ -57,16 +62,16 @@
         <item name="android:topDark">@color/transparent</item>
     </style>
 
-    <style name="TransparentTheme" parent="AppTheme">
+    <style name="TransparentTheme" parent="BaseStandardAppTheme">
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
-
+    <!-- TODO use our own parent theme here -->
     <style name="DialogOverlay" parent="android:style/Theme.Translucent.NoTitleBar">
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:backgroundDimEnabled">true</item>
