--- a/app/src/main/res/xml/preferences_all.xml
+++ b/app/src/main/res/xml/preferences_all.xml
@@ -7,6 +7,14 @@
         android:title="@string/preferences_app">
 
         <ListPreference
+            android:key="pref_color_scheme"
+            android:title="@string/pref_color_scheme"
+            android:entries="@array/pref_color_scheme_entries"
+            android:entryValues="@array/pref_color_scheme_values"
+            android:defaultValue="@string/color_scheme_light_value"
+            />
+
+        <ListPreference
             android:key="pref_font"
             android:title="@string/pref_font"
             android:entries="@array/pref_font_entries"
