--- a/app/src/main/res/drawable/nsfw_tag_bg.xml
+++ b/app/src/main/res/drawable/nsfw_tag_bg.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="?attr/nsfwColor" />
+        android:color="@color/venetian_red" />
 
     <padding
         android:top="1dp"
