replace button bg color attributes with a button drawable attr compatible with api 16

--- a/app/src/main/res/drawable/button_bg_dark.xml
+++ b/app/src/main/res/drawable/button_bg_dark.xml
@@ -3,28 +3,28 @@
 
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/buttonColorFocused" />
+            <solid android:color="@color/gray700" />
             <corners android:radius="2dp" />
         </shape>
     </item>
 
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/buttonColorDisabled" />
+            <solid android:color="@color/gray800" />
             <corners android:radius="2dp" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/buttonColorPressed" />
+            <solid android:color="@color/gray800" />
             <corners android:radius="2dp" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="?attr/buttonColor" />
+            <solid android:color="@color/gray900" />
             <corners android:radius="2dp" />
         </shape>
     </item>
