--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/subscribe_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_bg"
+                    android:background="?attr/buttonBgDrawable"
                     android:focusable="true">
 
                     <FrameLayout
