--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -19,10 +19,7 @@
     <attr name="tabLayoutTextColor" format="color" />
     <attr name="tabLayoutSelectedTextColor" format="color" />
 
-    <attr name="buttonColor" format="color" />
-    <attr name="buttonColorFocused" format="color" />
-    <attr name="buttonColorPressed" format="color" />
-    <attr name="buttonColorDisabled" format="color" />
+    <attr name="buttonBgDrawable" format="reference" />
     <attr name="buttonTextColor" format="color" />
 
     <attr name="nsfwColor" format="color" />
