--- a/app/src/main/res/layout/video_dialog.xml
+++ b/app/src/main/res/layout/video_dialog.xml
@@ -8,7 +8,8 @@
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_margin="48dp"
-        android:layout_gravity="center" />
+        android:keepScreenOn="true" />
 
 </FrameLayout>
