Remove font setting, use native font APIs

--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -26,7 +26,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:fontFamily="sans-serif-light"
                 android:textAlignment="viewStart"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="?attr/contentPrimaryTextColorPrimary"
@@ -56,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_reddit_gold_24dp"
                     android:drawableStart="@drawable/ic_reddit_gold_24dp"
-                    android:fontFamily="sans-serif-light"
+                    android:textFontWeight="300"
                     android:gravity="center"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textColor="?attr/contentPrimaryTextColorSecondary"
@@ -68,7 +67,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="sans-serif-light"
+                    android:textFontWeight="300"
                     android:gravity="end"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textColor="?attr/contentPrimaryTextColorSecondary"
