--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/link_view"
     android:layout_width="match_parent"
@@ -27,7 +26,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:fontFamily="sans-serif-light"
                 android:textAlignment="viewStart"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="?attr/textColorPrimary"
@@ -62,8 +60,8 @@
                         android:id="@+id/link_gilded_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/ic_reddit_gold_24dp"
                         android:drawableStart="@drawable/ic_reddit_gold_24dp"
+                        android:drawableLeft="@drawable/ic_reddit_gold_24dp"
                         android:gravity="center"
                         android:textColor="?attr/textColorSecondary"
                         android:textSize="@dimen/link_metadata_text_size"
@@ -100,12 +98,12 @@
                         style="@style/LinkMetadataTextViewTop"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
                         android:layout_marginEnd="4dp"
                         android:layout_marginRight="4dp"
-                        android:layout_toLeftOf="@id/link_timestamp"
                         android:layout_toStartOf="@id/link_timestamp"
+                        android:layout_toLeftOf="@id/link_timestamp"
                         android:ellipsize="end"
                         android:maxLines="1"
                         tools:text="573 points" />
@@ -128,12 +126,12 @@
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
                         android:layout_marginEnd="4dp"
                         android:layout_marginRight="4dp"
-                        android:layout_toLeftOf="@id/link_subreddit"
-                        android:layout_toStartOf="@id/link_subreddit">
+                        android:layout_toStartOf="@id/link_subreddit"
+                        android:layout_toLeftOf="@id/link_subreddit">
 
                         <com.ddiehl.android.htn.view.ColorSwapTextView
                             android:id="@+id/link_author"
@@ -228,9 +226,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                 android:drawableLeft="@drawable/ic_info_outline_black_24dp"
                 android:drawablePadding="@dimen/baseline_spacing"
-                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                 android:drawableTint="?attr/textColorSecondary"
                 android:gravity="center_vertical"
                 android:minHeight="48dp"
