--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -32,7 +32,6 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="viewStart"
                 android:gravity="start"
-                android:fontFamily="sans-serif-light"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="?attr/contentSecondaryTextColor"
                 tools:text="The brown fox jumped over the white fence"
@@ -44,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="viewStart"
                 android:gravity="start"
-                android:fontFamily="sans-serif-light"
+                android:textFontWeight="300"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="?attr/contentSecondaryTextColor"
                 tools:text="comment reply on /r/gamedev"
