--- a/app/src/main/res/layout/media_gallery_item.xml
+++ b/app/src/main/res/layout/media_gallery_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.ortiz.touchview.TouchImageView
         android:id="@+id/media_gallery_item_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
