--- a/app/src/main/res/layout/subscription_manager_fragment.xml
+++ b/app/src/main/res/layout/subscription_manager_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -28,15 +28,17 @@
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                style="@style/Widget.Material3.FloatingActionButton.Primary"
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:src="@drawable/ic_search_black_24dp"
-                android:tint="?attr/iconColor" />
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:contentDescription="@string/subscription_manager_search_button_cdesc"
+                app:srcCompat="@drawable/ic_search_black_24dp"
+                app:tint="?attr/iconColor" />
 
         </FrameLayout>
 
