--- a/app/src/main/res/layout/subscription_manager_fragment.xml
+++ b/app/src/main/res/layout/subscription_manager_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -35,8 +36,8 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:contentDescription="@string/subscription_manager_search_button_cdesc"
-                android:src="@drawable/ic_search_black_24dp"
-                android:tint="?attr/iconColor" />
+                android:tint="?attr/iconColor"
+                app:srcCompat="@drawable/ic_search_black_24dp" />
 
         </FrameLayout>
 
