fix for text ellipsizing, kinda

--- a/app/src/main/res/layout/media_gallery_fragment.xml
+++ b/app/src/main/res/layout/media_gallery_fragment.xml
@@ -24,6 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:tabIndicatorColor="?attr/colorAccent"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="?attr/tabLayoutSelectedTextColor"
         app:tabTextColor="?attr/tabLayoutTextColor" />
 
