--- a/app/src/main/res/layout/media_gallery_fragment.xml
+++ b/app/src/main/res/layout/media_gallery_fragment.xml
@@ -21,6 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:tabMode="scrollable"
         app:tabTextColor="?attr/textColorPrimary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
