Keep gallery images on top of tabs

--- a/app/src/main/res/layout/media_gallery_fragment.xml
+++ b/app/src/main/res/layout/media_gallery_fragment.xml
@@ -4,15 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/media_gallery_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/media_gallery_view_pager_tabs"
         android:layout_width="wrap_content"
@@ -23,5 +14,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:tabMode="scrollable"
         app:tabTextColor="?attr/textColorPrimary" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/media_gallery_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/media_gallery_view_pager_tabs"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
